<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="selected_request_activity_title">Звернення</string>

    <string name="pageTitle">Комунальне господарство</string>
    <string name="btnStatus">В роботі</string>
    <string name="create_text">Створено</string>
    <string name="date_create_text">25 лютого 2016</string>
    <string name="reg_text">Зареєстровано</string>
    <string name="date_reg_text">26 лютого 2016</string>
    <string name="deadline_text">Вирішити до</string>
    <string name="date_deadline_text">29 лютого 2016</string>
    <string name="resp_text">Відповідальний</string>
    <string name="date_resp_text">Дніпропетровський МВК ()</string>
    <string name="content_task">Открытый люк (возле рекламного щита), район поворота 18 и 19 трамваев на проспект Мира с
        Донецкого шоссе</string>
    <string name="title_activity_main">Всі звернення</string>
    <string name="action_settings">Settings</string>
    <string name="all_request_item">Всі звернення</string>
    <string name="request_on_map_item">Звернення на мапі</string>
    <string name="login_item">Увійти в аккаунт</string>
    <string name="nav_header_text">e-contact</string>
    <string name="nav_footer_text"><![CDATA[Зроблено з любов&apos;ю <br/> <u><font color=#f78b4a>IT Ruh Dnipro</u> та <u><font color=#f78b4a>Yalantis</u>]]></string>
    <string name="content_req_ic_text">0</string>
    <string name="content_req_title_text">Комунальне господарство</string>

    <string name="content_req_address_tv">вул. Б.Короткова, 22, Дніпропетровськ</string>
    <string name="content_req_date_text">Лют. 09, 2016</string>
    <string name="content_req_work_time_text">7 днів</string>
    <string name="in_work_request_status_tab">В РОБОТІ</string>
    <string name="done_request_status_tab">ВИКОНАНО</string>
    <string name="wait_request_status_tab">ОЧІКУЄ</string>
    <string name="in_work_request_status">В роботі</string>
    <string name="done_request_status">Виконано</string>
    <string name="wait_request_status">Очікує</string>
    <string name="app_name">Task2</string>
    <string name="facebook_app_id">1205664589464647</string>
    <string name="refresh">Видалити кеш</string>

</resources>
