<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
           android:id="@+id/main_group">
        <item
                android:id="@+id/nav_all_request"
                android:title="@string/all_request_item"
                android:icon="@drawable/ic_issues"/>

        <item
                android:id="@+id/nav_request_on_map"
                android:icon="@drawable/ic_map"
                android:title="@string/request_on_map_item"/>


    </group>

    <group android:id="@+id/login_group">
        <item
                android:id="@+id/nav_login"
                android:title="@string/login_item"/>
        <item
            android:id="@+id/refresh"
            android:title="@string/refresh"/>
    </group>

</menu>